// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "06/04/2022",
      "hora": "10:30",
      "id": 1624656490655,
      "mascota": "Cathy",
      "propietario": "Jesus",
      "sintomas": "Vomitos",
      "telefono": "685934281",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "06/04/2022",
      "hora": "10:30",
      "id": 1624656490655,
      "mascota": "Alay",
      "propietario": "Jesus",
      "sintomas": "Vomitos",
      "telefono": "685934281",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
